fixed overflow-x bug

--- a/src/assets/globals.scss
+++ b/src/assets/globals.scss
@@ -9,6 +9,7 @@ body {
 	color: var(--text-color);
 	margin: 0;
 	height: 100%;
+	overflow-x: hidden;
 }
 
 a {
